test/Fail/OpaqueUnfoldType.err
OpaqueUnfoldType.agda:52.50-51: error: [UnequalTerms]
The terms
  n
and
  zero + n
are not equal at type Nat
when checking that the expression x has type Vec A (zero + n)
